# simple-cuda-voxel-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: Octree.cuh  block.cuh  block_texture.cuh  block_variant.cuh  blocks_data.cuh  blocksdata.cuh  chunk.cuh  chunk_generation.cuh  chunkgeneration.cuh  cuda_math.cuh  cuda_morton.cuh  cuda_noise.cuh  cudamorton.cuh  globals.cuh  material.cuh  octree.cuh  pixel_drawing.cuh  pixeldrawing.cuh  pointlight.cuh  renderer.cuh  texturing.cuh  vector3.cuh  voxel_engine.h
src/: Octree.cu  block.cu  block_texture.cu  block_variant.cu  blocks_data.cu  blocksdata.cu  blocktexture.cu  chunk.cu  chunk_generation.cu  chunkgeneration.cu  cuda_morton.cu  cudamorton.cu  globals.cu  main.cu  octree.cu  pixel_drawing.cu  pixeldrawing.cu  renderer.cu  vector3.cu  voxel_engine.cu
